# ENERGY-ANALYSIS

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
dashboards/: app.py
data/processed/: analysis_report.csv  data_quality_report.csv  merged_data.csv
data/raw/: chicago_energy.csv  chicago_weather.csv  houston_energy.csv  houston_weather.csv  new_york_energy.csv  new_york_weather.csv  phoenix_energy.csv  phoenix_weather.csv  seattle_energy.csv  seattle_weather.csv
src/: analysis.py  data_fetcher.py  data_processor.py  data_quality.py  pipeline.py
summary/: AI_USAGE.md
tests/: test_pipeline.py
weather_energy_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
